# SteamPunkGogglesOpenCVPlugin

./: CMakeLists.txt  README.md  gststeampunkgoggles.c  gststeampunkgoggles.h  zhelpers.h
lib/: CMakeLists.txt  cppprocess.cpp  cppprocess.h
